--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,3 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
@@ -35,4 +26,55 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.App {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: #3a3a3a;
+}
+
+.App > h2 {
+  color: white;
+  position: sticky;
+  top: 10px;
+  background-color: #3a3a3ac9;
+  width: 100%;
+  text-align: center;
+  padding: 15px;
+  box-sizing: border-box;
+}
+
+.spinner-placeholder {
+  width: 80px;
+  height: 80px;
+}
+
+.post {
+  display: flex;
+  margin: 10px 20px;
+  max-width: 700px;
+  border-radius: 5px;
+  background-color: white;
+}
+
+.post.loading {
+  justify-content: center;
+}
+
+.post-img {
+  flex: 1;
+  min-width: 200px;
+  height: 200px;
+}
+.post img {
+  height: 200px;
+  border-radius: 5px;
+}
+
+.post-body {
+  flex: 5;
+  padding-left: 20px;
 }
